--- a/architecture-examples/dojo/css/app.css
+++ b/architecture-examples/dojo/css/app.css
@@ -36,8 +36,16 @@
 #todo-list .dijitCheckBoxInput {
     opacity: 0;
     position: absolute;
-    top: 14px;
+    top: 0;
+    left: 0;
     z-index: 10;
+    width: 100%;
+    height: 100%;
+}
+
+.dj_ie #todo-list .dijitCheckBoxInput {
+	left: -3px;
+	border-bottom: medium none;
 }
 
 /** Match up inline edit box with styling */
